fix spacing and sizing in product index page

--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -139,8 +139,8 @@ $button-padding-side-deault: 45px;
         }
 
         &.is-product-label {
-            width: 24px;
-            height: 24px;
+            width: 32px;
+            height: 32px;
             max-width: initial;
         }
 
