--- a/assets/sass/layouts/_breadcrumb.scss
+++ b/assets/sass/layouts/_breadcrumb.scss
@@ -57,7 +57,7 @@
     // >>>>>>>>>>>>>>>>>>>>>>>
     position: relative;
     z-index: zindex(lv2);
-    padding: 10px 0;
+    padding: 5px 0;
     margin: 0 -50px 30px;
     background-color: $color-gray-10;
 
@@ -96,7 +96,7 @@
         a,
         span {
             font-family: font-family(primary);
-            font-size: font-primary-size(size-4);
+            font-size: font-primary-size(size-8);
 
             &:hover {
                 color: $color-gray-1;
@@ -106,13 +106,13 @@
 
         strong {
             font-family: font-family(secondary);
-            font-size: font-secondary-size(size-4);
+            font-size: font-secondary-size(size-8);
         }
 
         i {
             position: relative;
             top: -1px;
-            font-size: $font-size-2;
+            font-size: $font-size-11;
             vertical-align: middle;
             margin: 0 10px;
         }
