--- a/assets/sass/pages/_product.scss
+++ b/assets/sass/pages/_product.scss
@@ -28,15 +28,15 @@ $product-container-padding: 0 50px 25px 50px;
 
     .col-left {
         // flex: 0;
-        width: 25%;
+        width: 20%;
         padding-left: 0;
         padding-right: 0;
     }
 
     .col-main {
         // flex: 1;
-        width: 75%;
-        padding-left: 20px;
+        width: 80%;
+        padding-left: 40px;
         padding-right: 0;
 
         .product-segment-inner {
@@ -133,7 +133,7 @@ $product-container-padding: 0 50px 25px 50px;
     // STYLES OF CHILD CLASS
     // >>>>>>>>>>>>>>>>>>>>>>>
     .main {
-        max-width: 1280px;
+        max-width: 1440px;
         padding: $product-container-padding;
         margin: auto;
     }
@@ -248,9 +248,9 @@ $product-container-padding: 0 50px 25px 50px;
             max-width: 100%;
         }
 
-        @media (min-width: 1025px) and (max-width: screen(labtop-lg-max)) {
-            max-width: 1024px;
-        }
+        // @media (min-width: 1025px) and (max-width: screen(labtop-lg-max)) {
+        //     max-width: 1024px;
+        // }
     }
 
     .product-filter {
